--- a/practice-01/index.html
+++ b/practice-01/index.html
@@ -33,9 +33,9 @@
                             <li><a class="item small-text" href="#">Contact</a></li>
                         </ul>
                     </div>
-                    <div class="nav__option">
-                        <button class="button btn ">Login</button>
-                        <button class="button btn ">Try for Free</button>
+                    <div class="nav__button ">
+                        <button class="btn btn--primary ">Login</button>
+                        <button class="btn btn--secondary ">Try for Free</button>
 
                     </div>
                 </nav>
@@ -71,7 +71,7 @@
     --------------------->
     <section class="service">
         <div class="container">
-            <div class="service__left card card--none-pic">
+            <div class="service__left card ">
                 <h5 class="card__title">SERVICE</h5>
                 <h1 class="card__text--lg">CRM insights: Selecting <br>
                     the Right One for Your <br>
@@ -99,39 +99,39 @@
     <section class="product">
         <div class="container">
             <div class="product__content  card card__img">
-                <div class="card__img__body ">
+                <div class="card__img-body ">
                     <h5 class="card__title">News</h5>
-                    <div class="card__pic card__pic--product1"></div>
+                    <div class="car__img--bg bg-product1"></div>
                     <h3 class="card__text">How To Deliver a Successful Product Launch</h3>
                     <h4 class="card__footer">29 Jun 2022,<span class="card__footer--gray">by joshua Nash</span> </h4>
                 </div>
-                <div class="card__img__body ">
+                <div class="card__img-body ">
                     <h5 class="card__title">Sales</h5>
-                    <div class="card__pic card__pic--product2"></div>
+                    <div class="card__img--bg bg-product2"></div>
                     <h3 class="card__text">The best cities for sales careers in 2022</h3>
                     <h4 class="card__footer">20 Mar 2022, <span class="card__footer--gray"> Bill Holloway</span></h4>
                 </div>
-                <div class="card__img__body ">
+                <div class="card__img-body ">
                     <h5 class="card__title">Sales</h5>
-                    <div class="card__pic card__pic--product3"></div>
+                    <div class="card__img--bg bg-product3"></div>
                     <h3 class="card__text">How to use 360 feedback to improve sales performance</h3>
                     <h4 class="card__footer">07 Jun 2022, <span class="card__footer--gray">Stephen Henderson</span> </h4>
                 </div>
-                <div class="card__img__body ">
+                <div class="card__img-body ">
                     <h5 class="card__title">Sales</h5>
-                    <div class="card__pic card__pic--product4"></div>
+                    <div class="card__img--bg bg-product4"></div>
                     <h3 class="card__text">The Challenger Sale model: How to lead the conversation</h3>
                     <h4 class="card__footer">09 Jan 2022,<span class="card__footer--gray">by joshua Nash</span> </h4>
                 </div>
-                <div class="card__img__body ">
+                <div class="card__img-body ">
                     <h5 class="card__title">Product</h5>
-                    <div class="card__pic card__pic--product5"></div>
+                    <div class="card__img--bg bg-product5"></div>
                     <h3 class="card__text">3 ways To automate your lead generation process with Yoora</h3>
                     <h4 class="card__footer">08 Jul 2022, <span class="card__footer--gray"> Leroy Figueroa</span> </h4>
                 </div>
-                <div class="card__img__body ">
+                <div class="card__img-body ">
                     <h5 class="card__title">Product</h5>
-                    <div class="card__pic card__pic--product6"></div>
+                    <div class="card__img--bg bg-products6"></div>
                     <h3 class="card__text"> Marketplace Monthly Apps Spotlight: Aug 2022</h3>
                     <h4 class="card__footer">05 Aug 2022,<span class="card__footer--gray">by joshua Nash</span> </h4>
                 </div>
@@ -151,12 +151,50 @@
     --------------------->
     <section class="marketing">
         <div class="container">
-            <div class="marketing__left"></div>
-            <div class="marketing__right">
-                <div class="marketing__item"></div>
-                <div class="marketing__item"></div>
-                <div class="marketing__item"></div>
+            <div class="marketing__content">
+                <div class="marketing__left card card__img">
+                    <div class="card__img-body ">
+                        <h5 class="card__title">Marketing</h5>
+                        <div class="card__img--bg bg-marketing"></div>
+                        <h3 class="card__text">Email marketing best practices: 10 experts share their email tips</h3>
+                        <h4 class="card__footer">23 Nov 2022,<span class="card__footer--gray">by joshua Nash</span></h4>
+                    </div>
+                </div>
+                <div class="marketing__right card ">
+
+                    <div class="card-body">
+                        <div class="card-body__block">
+                            <h3 class="card__text"> Marketplace Monthly Apps Spotlight: Aug 2022</h3>
+                            <h4 class="card__footer">05 Aug 2022,<span class="card__footer--gray">by joshua Nash</span>
+                            </h4>
+                        </div>
+                        <div class="card-body__block">
+                            <h5 class="card__title">PRODUCT</h5>
+                        </div>
+                    </div>
+                    <div class="card-body">
+                        <div class="card-body__block">
+                            <h3 class="card__text"> Marketplace Monthly Apps Spotlight: Aug 2022</h3>
+                            <h4 class="card__footer">05 Aug 2022,<span class="card__footer--gray">by joshua Nash</span>
+                            </h4>
+                        </div>
+                        <div class="card-body__block">
+                            <h5 class="card__title">PRODUCT</h5>
+                        </div>
+                    </div>
+                    <div class="card-body">
+                        <div class="card-body__block">
+                            <h3 class="card__text"> Marketplace Monthly Apps Spotlight: Aug 2022</h3>
+                            <h4 class="card__footer">11 Oct 2022,<span class="card__footer--gray">by joshua Nash</span>
+                            </h4>
+                        </div>
+                        <div class="card-body__block">
+                            <h5 class="card__title">PRODUCT</h5>
+                        </div>
+                    </div>
+                </div>
             </div>
+
         </div>
 
     </section>
