--- a/practice-01/index.html
+++ b/practice-01/index.html
@@ -101,37 +101,49 @@
             <div class="product__content  card card__img">
                 <div class="card__img-body ">
                     <h5 class="card__title">News</h5>
-                    <div class="card__img--bg bg-product1"></div>
+                    <div class="card__img-bg ">
+                        <img src="./img/product__item1.png" class="bg-product">
+                    </div>
                     <h3 class="card__text">How To Deliver a Successful Product Launch</h3>
                     <h4 class="card__footer">29 Jun 2022,<span class="card__footer--gray">by joshua Nash</span> </h4>
                 </div>
                 <div class="card__img-body ">
                     <h5 class="card__title">Sales</h5>
-                    <div class="card__img--bg bg-product2"></div>
+                    <div class="card__img-bg bg-product2">
+                        <img src="./img/product__item2.png" class="bg-product">
+                    </div>
                     <h3 class="card__text">The best cities for sales careers in 2022</h3>
                     <h4 class="card__footer">20 Mar 2022, <span class="card__footer--gray"> Bill Holloway</span></h4>
                 </div>
                 <div class="card__img-body ">
                     <h5 class="card__title">Sales</h5>
-                    <div class="card__img--bg bg-product3"></div>
+                    <div class="card__img-bg">
+                        <img src="./img/product__item3.png" class="bg-product">
+                    </div>
                     <h3 class="card__text">How to use 360 feedback to improve sales performance</h3>
                     <h4 class="card__footer">07 Jun 2022, <span class="card__footer--gray">Stephen Henderson</span> </h4>
                 </div>
                 <div class="card__img-body ">
                     <h5 class="card__title">Sales</h5>
-                    <div class="card__img--bg bg-product4"></div>
+                    <div class="card__img-bg">
+                        <img src="./img/product__item4.png" class="bg-product">
+                    </div>
                     <h3 class="card__text">The Challenger Sale model: How to lead the conversation</h3>
                     <h4 class="card__footer">09 Jan 2022,<span class="card__footer--gray">by joshua Nash</span> </h4>
                 </div>
                 <div class="card__img-body ">
                     <h5 class="card__title">Product</h5>
-                    <div class="card__img--bg bg-product5"></div>
+                    <div class="card__img-bg ">
+                        <img src="./img/product__item5.png" class="bg-product">
+                    </div>
                     <h3 class="card__text">3 ways To automate your lead generation process with Yoora</h3>
                     <h4 class="card__footer">08 Jul 2022, <span class="card__footer--gray"> Leroy Figueroa</span> </h4>
                 </div>
                 <div class="card__img-body ">
                     <h5 class="card__title">Product</h5>
-                    <div class="card__img--bg bg-product6"></div>
+                    <div class="card__img-bg">
+                        <img src="./img/product__item6.png" alt="" class="bg-product">
+                    </div>
                     <h3 class="card__text"> Marketplace Monthly Apps Spotlight: Aug 2022</h3>
                     <h4 class="card__footer">05 Aug 2022,<span class="card__footer--gray">by joshua Nash</span> </h4>
                 </div>
@@ -155,7 +167,7 @@
                 <div class="marketing__left card card__img">
                     <div class="card__img-body ">
                         <h5 class="card__title">Marketing</h5>
-                        <div class="card__img--bg bg-marketing"></div>
+                        <div class="card__img-bg bg-marketing"></div>
                         <h3 class="card__text">Email marketing best practices: 10 experts share their email tips</h3>
                         <h4 class="card__footer">23 Nov 2022,<span class="card__footer--gray">by joshua Nash</span></h4>
                     </div>
