--- a/practice-01/index.html
+++ b/practice-01/index.html
@@ -169,7 +169,7 @@
                     <div class="card__img-body ">
                         <h5 class="card__title">Marketing</h5>
                         <div class="card__img-pic ">
-                            <img src="./img/marketing__img.png" alt="Here is a photo of the marketing title above">
+                            <img src="./img/marketing__img.png" alt="Here is a photo of the marketing title above" class="marketing__pic">
                         </div>
                         <h3 class="card__text">Email marketing best practices: 10 experts share their email tips</h3>
                         <h4 class="card__footer">23 Nov 2022,<span class="card__footer--gray">by joshua Nash</span></h4>
@@ -177,33 +177,34 @@
                 </div>
                 <div class="marketing__right card card--horizontal">
                     <div class="card__body">
-                        <div class="card--horizontal-block">
+                        <div class="card-block">
                             <h3 class="card__text"> Marketplace Monthly Apps Spotlight: Aug 2022</h3>
-                            <h4 class="card__footer">05 Aug 2022,<span class="card__footer--gray">by joshua Nash</span>
+                            <h4 class="card__footer">11 Aug 2022,<span class="card__footer--gray">by joshua Nash</span>
                             </h4>
                         </div>
-                        <div class="card--horizontal-block">
+                        <div class="card-block">
                             <h5 class="card__title">PRODUCT</h5>
                         </div>
                     </div>
                     <div class="card__body">
-                        <div class="card--horizontal-block">
-                            <h3 class="card__text"> Marketplace Monthly Apps Spotlight: Aug 2022</h3>
-                            <h4 class="card__footer">05 Aug 2022,<span class="card__footer--gray">by joshua Nash</span>
+                        <div class="card-block">
+                            <h3 class="card__text"> Sales presentations: templates, examples and ideas on how to present like a pro</h3>
+                            <h4 class="card__footer">11 Oct 2022,<span class="card__footer--gray"> by Laura Ryan</span>
                             </h4>
                         </div>
-                        <div class="card--horizontal-block">
-                            <h5 class="card__title">PRODUCT</h5>
+                        <div class="card-block">
+                            <h5 class="card__title">SALES</h5>
                         </div>
                     </div>
                     <div class="card__body">
-                        <div class="card--horizontal-block">
-                            <h3 class="card__text"> Marketplace Monthly Apps Spotlight: Aug 2022</h3>
-                            <h4 class="card__footer">11 Oct 2022,<span class="card__footer--gray">by joshua Nash</span>
+                        <div class="card-block">
+                            <h3 class="card__text"> How To Deliver a Successful <br>
+                                Product Launch</h3>
+                            <h4 class="card__footer">30 Jan 2022,<span class="card__footer--gray"> by Alice Washington</span>
                             </h4>
                         </div>
-                        <div class="card--horizontal-block">
-                            <h5 class="card__title">PRODUCT</h5>
+                        <div class="card-block">
+                            <h5 class="card__title">NEWS</h5>
                         </div>
                     </div>
                 </div>
