--- a/practice-01/index.html
+++ b/practice-01/index.html
@@ -22,7 +22,7 @@
                     <img src="./img/logo.png" alt="logo">
 
                 </a>
-                <nav class="navbar">
+                <nav class="navbar text--black">
                     <div class="nav__menu">
                         <ul class="menu__list">
                             <li class="list__item">
@@ -50,12 +50,12 @@
                 </nav>
             </div>
             <div class="header__carousel">
-                <p class="carousel__content--above font--large">New and insights <br>
-                    <span class="carousel__content--below">form our experts</span>
+                <p class="carousel__content--above text--black font--large">New and insights <br>
+                    <span class="carousel__content--below text--grey">form our experts</span>
                 </p>
             </div>
             <div class="header__tab nav__menu">
-                <ul class="tab__menu  menu__list">
+                <ul class="tab__menu  menu__list ">
                     <li><a id="list--mark" class="item font--medium" href="#">All Articles</a></li>
                     <li><a class="item font--medium" href="#">Marketing</a></li>
                     <li><a class="item font--medium" href="#">Service</a></li>
@@ -84,7 +84,7 @@
                     <h1 class="card__text font--large">CRM insights: Selecting <br>
                         the Right One for Your <br>
                         Organization</h1>
-                    <h4 class="card__footer">05 Sep 2022, <span class="card__footer--gray">by Joshua Nash</span> </h4>
+                    <h4 class="card__footer">05 Sep 2022, <span class="text--grey">by Joshua Nash</span> </h4>
                 </div>
             </div>
             <div class="service-right">
@@ -116,7 +116,7 @@
                             class="product__pic">
                     </div>
                     <h3 class="card__text">How To Deliver a Successful Product Launch</h3>
-                    <h4 class="card__footer">29 Jun 2022,<span class="card__footer--gray">by joshua Nash</span> </h4>
+                    <h4 class="card__footer">29 Jun 2022,<span class="text--grey">by joshua Nash</span> </h4>
                 </div>
                 <div class="card__body">
                     <h5 class="card__title">Sales</h5>
@@ -125,7 +125,7 @@
                             class="product__pic">
                     </div>
                     <h3 class="card__text">The best cities for sales careers in 2022</h3>
-                    <h4 class="card__footer">20 Mar 2022, <span class="card__footer--gray">by Bill Holloway</span></h4>
+                    <h4 class="card__footer">20 Mar 2022, <span class="text--grey">by Bill Holloway</span></h4>
                 </div>
                 <div class="card__body">
                     <h5 class="card__title">Sales</h5>
@@ -134,7 +134,7 @@
                             class="product__pic">
                     </div>
                     <h3 class="card__text">How to use 360 feedback to improve sales performance</h3>
-                    <h4 class="card__footer">07 Jun 2022, <span class="card__footer--gray">by Stephen Henderson</span>
+                    <h4 class="card__footer">07 Jun 2022, <span class="text--grey">by Stephen Henderson</span>
                     </h4>
                 </div>
                 <div class="card__body">
@@ -144,7 +144,7 @@
                             class="product__pic">
                     </div>
                     <h3 class="card__text">The Challenger Sale model: How to lead the conversation</h3>
-                    <h4 class="card__footer">09 Jan 2022,<span class="card__footer--gray">by joshua Nash</span> </h4>
+                    <h4 class="card__footer">09 Jan 2022,<span class="text--grey">by joshua Nash</span> </h4>
                 </div>
                 <div class="card__body">
                     <h5 class="card__title">Product</h5>
@@ -153,7 +153,7 @@
                             class="product__pic">
                     </div>
                     <h3 class="card__text">3 ways To automate your lead generation process with Yoora</h3>
-                    <h4 class="card__footer">08 Jul 2022, <span class="card__footer--gray"> Leroy Figueroa</span> </h4>
+                    <h4 class="card__footer">08 Jul 2022, <span class="text--grey"> Leroy Figueroa</span> </h4>
                 </div>
                 <div class="card__body">
                     <h5 class="card__title">Product</h5>
@@ -162,7 +162,7 @@
                             class="product__pic">
                     </div>
                     <h3 class="card__text"> Marketplace Monthly Apps Spotlight: Aug 2022</h3>
-                    <h4 class="card__footer">05 Aug 2022,<span class="card__footer--gray">by joshua Nash</span> </h4>
+                    <h4 class="card__footer">05 Aug 2022,<span class="text--grey">by joshua Nash</span> </h4>
                 </div>
 
 
@@ -193,7 +193,7 @@
                         </h3>
                         <h4 class="card__footer">
                             23 Nov 2022,
-                            <span class="card__footer--gray">by joshua Nash</span>
+                            <span class="text--grey">by joshua Nash</span>
                         </h4>
                     </div>
                 </div>
@@ -205,7 +205,7 @@
                             </h3>
                             <h4 class="card__footer">
                                 11 Aug 2022,
-                                <span class="card__footer--gray">by joshua Nash</span>
+                                <span class="text--grey">by joshua Nash</span>
                             </h4>
                         </div>
                         <div class="card--horizontal-block">
@@ -219,7 +219,7 @@
                             </h3>
                             <h4 class="card__footer">
                                 11 Oct 2022,
-                                <span class="card__footer--gray"> by Laura Ryan</span>
+                                <span class="text--grey"> by Laura Ryan</span>
                             </h4>
                         </div>
                         <div class="card--horizontal-block">
@@ -232,7 +232,7 @@
                                 Product Launch</h3>
                             <h4 class="card__footer">
                                 30 Jan 2022,
-                                <span class="card__footer--gray"> by Alice Washington</span>
+                                <span class="text--grey"> by Alice Washington</span>
                             </h4>
                         </div>
                         <div class="card--horizontal-block">
@@ -267,7 +267,7 @@
                     <h3 class="card__text">Sales Funnels: Definition, Process, Stages and Examples</h3>
                     <h4 class="card__footer">
                         29 Jun 2022,
-                        <span class="card__footer--gray">by joshua Nash</span>
+                        <span class="text--grey">by joshua Nash</span>
                     </h4>
                 </div>
                 <div class="card__body">
@@ -279,7 +279,7 @@
                     <h3 class="card__text">What is a sales Yoora and how do you build one?</h3>
                     <h4 class="card__footer">
                         29 Mar 2022,
-                        <span class="card__footer--gray"> by Amanda Brooks</span>
+                        <span class="text--grey"> by Amanda Brooks</span>
                     </h4>
                 </div>
                 <div class="card__body">
@@ -291,7 +291,7 @@
                     <h3 class="card__text">10 real estate cold calling scripts to increase lead generation</h3>
                     <h4 class="card__footer">
                         27 Dec 2022,
-                        <span class="card__footer--gray"> by Roxie Sandoval</span>
+                        <span class="text--grey"> by Roxie Sandoval</span>
                     </h4>
                 </div>
             </div>
@@ -311,18 +311,18 @@
         <div class="container">
             <div class="cta__content">
                 <div class="cta__passage">
-                    <p class="cta__title font--large">Ready to supercharge your business?</p>
-                    <p class="cta__text  font--medium">
+                    <p class="cta__title text--white font--large">Ready to supercharge your business?</p>
+                    <p class="cta__text text--white font--medium">
                         Ask about Yoora products, pricing, implementation, or anything else.
                         <br> Our highly trained reps are standing by, ready to help.
                     </p>
                 </div>
                 <div class="cta__button">
-                    <button class="btn btn--primary btn--chevron"> Try For Free
+                    <button class="btn btn--chevron"> Try For Free
                         <img class="btn__icon" src="./img/button__icon.png"
                             alt="This is the chevron-right icon of the button">
                     </button>
-                    <p class="cta__text text--small">Full access. No credit card required.</p>
+                    <p class="cta__text text--white font--small">Full access. No credit card required.</p>
                 </div>
             </div>
 
@@ -350,19 +350,19 @@
                         and marketing solution for SMBs</p>
                  <ul class="media menu__list">
                         <li>
-                            <a class="item" href="_blank"><img src="./img/Twitter.png" alt="Here is a logo of the media above" class="media-icon"></a>
+                            <a class="item" href="https://twitter.com/"><img src="./img/Twitter.png" alt="Here is a logo of the media above" class="media-icon"></a>
                         </li>
                         <li>
-                            <a class="item" href="_blank"> <img src="./img/Facebook.png" alt="Here is a logo of the media above" class="media-icon"></a>
+                            <a class="item" href="https://www.facebook.com/"> <img src="./img/Facebook.png" alt="Here is a logo of the media above" class="media-icon"></a>
                         </li>
                         <li>
-                            <a class="item" href="_blank"> <img src="./img/Linkedin.png" alt="Here is a logo of the media above" class="media-icon"></a>                        </li>
+                            <a class="item" href="https://www.linkedin.com/"> <img src="./img/Linkedin.png" alt="Here is a logo of the media above" class="media-icon"></a>                        </li>
                     </ul>
 
             </div>
-            <div class="footer__content-right">
+            <div class="footer__content-right text--black">
                 <div class="footer__menu">
-                    <ul class="menu__list">
+                    <ul class="menu__list ">
                         <li class="list__item"><a id="list--mark" class="item " href="#">Company</a></li>
                         <li class="list__item"><a class="item" href="#">About</a></li>
                         <li class="list__item"><a class="item" href="#">Pricing</a></li>
@@ -408,7 +408,7 @@
 
         <hr class="footer__line">
 
-        <div class="footer__rule container">
+        <div class="footer__rule text--black container ">
             <a class="rule__copyright" href="__blank">&#169;Copyright 2022 Yoora, Inc.</a>
 
             <div class="footer__rule-right">
