--- a/practice-01/index.html
+++ b/practice-01/index.html
@@ -56,12 +56,12 @@
             </div>
             <div class="header__tab nav__menu">
                 <ul class="tab__menu  menu__list ">
-                    <li><a id="list--mark" class="item font--medium" href="#">All Articles</a></li>
+                    <li><a class="list--mark" class="item font--medium" href="#">All Articles</a></li>
                     <li><a class="item font--medium" href="#">Marketing</a></li>
                     <li><a class="item font--medium" href="#">Service</a></li>
                     <li><a class="item font--medium" href="#">Product</a></li>
                     <li><a class="item font--medium" href="#">News</a></li>
-
+                </ul>
             </div>
 
     </header>
@@ -164,9 +164,8 @@
                     <h3 class="card__text"> Marketplace Monthly Apps Spotlight: Aug 2022</h3>
                     <h4 class="card__footer">05 Aug 2022,<span class="text--grey">by joshua Nash</span> </h4>
                 </div>
-
-
             </div>
+        </div>
     </section>
     <!-------------------
      Product end
@@ -363,7 +362,7 @@
             <div class="footer__content-right">
                 <div class="footer__menu">
                     <ul class="menu__list ">
-                        <li class="list__item"><a id="list--mark" class="item " href="#">Company</a></li>
+                        <li class="list__item"><a class="list--mark" class="item " href="#">Company</a></li>
                         <li class="list__item"><a class="item" href="#">About</a></li>
                         <li class="list__item"><a class="item" href="#">Pricing</a></li>
                         <li class="list__item"><a class="item" href="#">Jobs</a></li>
@@ -373,7 +372,7 @@
                 </div>
                 <div class="footer__menu">
                     <ul class="menu__list">
-                        <li class="list__item"><a id="list--mark" class="item" href="#">Product</a></li>
+                        <li class="list__item"><a class="list--mark" class="item" href="#">Product</a></li>
                         <li class="list__item"><a class="item" href="#">Sales software</a></li>
                         <li class="list__item"><a class="item" href="#">Features</a></li>
                         <li class="list__item"><a class="item" href="#">Privacy and security</a></li>
@@ -384,7 +383,7 @@
                 </div>
                 <div class="footer__menu">
                     <ul class="menu__list">
-                        <li class="list__item"><a id="list--mark" class="item" href="#">Discover</a></li>
+                        <li class="list__item"><a class="list--mark" class="item" href="#">Discover</a></li>
                         <li class="list__item"><a class="item" href="#">Partner Program</a></li>
                         <li class="list__item"><a class="item" href="#">Get our newsletter</a></li>
                         <li class="list__item"><a class="item" href="#">Sales Pipeline Course</a></li>
@@ -395,7 +394,7 @@
                 </div>
                 <div class="footer__menu">
                     <ul class="menu__list">
-                        <li class="list__item"><a id="list--mark" class="item" href="#">Help Center</a></li>
+                        <li class="list__item"><a class="list--mark" class="item" href="#">Help Center</a></li>
                         <li class="list__item"><a class="item" href="#">Community</a></li>
                         <li class="list__item"><a class="item" href="#">Knowledge Base</a></li>
                         <li class="list__item"><a class="item" href="#">Academy</a></li>
