--- a/practice-02/index.html
+++ b/practice-02/index.html
@@ -201,7 +201,7 @@
                             </a>
                         </h3>
                     </div>
-                    <h4 class="card-footer">29 Jun 2022,<span class="text--grey">by joshua Nash</span> </h4>
+                    <h4 class="card-footer">29 Jun 2022,<span class="text-black-50">by joshua Nash</span> </h4>
                 </div>
 
                 <div class="card card-img">
@@ -214,7 +214,7 @@
                             </a>
                         </h3>
                     </div>
-                    <h4 class="card-footer">20 Mar 2022, <span class="text--grey">by Bill Holloway</span></h4>
+                    <h4 class="card-footer">20 Mar 2022, <span class="text-black-50">by Bill Holloway</span></h4>
                 </div>
 
                 <div class="card card-img">
@@ -227,7 +227,7 @@
                             </a>
                         </h3>
                     </div>
-                    <h4 class="card-footer">07 Jun 2022, <span class="text--grey">by Stephen Henderson</span>
+                    <h4 class="card-footer">07 Jun 2022, <span class="text-black-50">by Stephen Henderson</span>
                 </div>
 
                 <div class="card card-img">
@@ -240,7 +240,7 @@
                             </a>
                         </h3>
                     </div>
-                    <h4 class="card-footer">09 Jan 2022,<span class="text--grey">by joshua Nash</span> </h4>
+                    <h4 class="card-footer">09 Jan 2022,<span class="text-black-50">by joshua Nash</span> </h4>
                 </div>
 
                 <div class="card card-img">
@@ -253,7 +253,7 @@
                             </a>
                         </h3>
                     </div>
-                    <h4 class="card-footer">08 Jul 2022, <span class="text--grey"> Leroy Figueroa</span> </h4>
+                    <h4 class="card-footer">08 Jul 2022, <span class="text-black-50"> Leroy Figueroa</span> </h4>
                 </div>
 
                 <div class="card card-img">
@@ -266,7 +266,7 @@
                             </a>
                         </h3>
                     </div>
-                    <h4 class="card-footer">05 Aug 2022,<span class="text--grey">by joshua Nash</span> </h4>
+                    <h4 class="card-footer">05 Aug 2022,<span class="text-black-50">by joshua Nash</span> </h4>
                 </div>
 
             </div>
@@ -297,7 +297,7 @@
                         </h3>
                         <h4 class="card__footer">
                             23 Nov 2022,
-                            <span class="text--grey">by joshua Nash</span>
+                            <span class="text-black-50">by joshua Nash</span>
                         </h4>
                     </div>
                 </div>
